src/test/deca/context/invalid/logic_on_int.deca

// Description :
// Opérateur logique appliqué à des int 
//
// Resultats :
// Erreur contextuelle
// opérateur && attend des boolean
//

{
  boolean b;
  b = 1 && 2;
}